[package]
name = "snowflake"
version = "1.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.7.2"
log = "0.4.14"

[dependencies.serde]
version = "1.0.126"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.64"

[dependencies.reqwest]
version = "0.11.3"
features = ["rustls", "blocking"]

[dev-dependencies.tokio]
version = "1.6.1"
features = ["macros", "rt"]

[dev-dependencies.pretty_env_logger]
version = "0.4.0"